fix: fix search jump error

--- a/src/components/searchsuggest/style/index.less
+++ b/src/components/searchsuggest/style/index.less
@@ -51,6 +51,7 @@
       & > span:last-child {
         text-align: right;
         width: 22%;
+        min-width: 80px;
       }
     }
   }
